Fixed: CookieScreen on mobile

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -55,7 +55,7 @@ body {
 }
 
 .cookieDiv {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -66,6 +66,13 @@ body {
     text-align: center;
     border-radius: 5px;
     box-shadow: 4px 4px 10px rgb(20, 20, 20);
+}
+
+@media(max-width: 854px) { 
+    .cookieDiv {
+        width: 80%;
+        height: auto;
+    }
 }
 
 a {
